--- a/appname/templates/appname/index.html
+++ b/appname/templates/appname/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <form action="api/v1/asset/" method="POST" enctype="multipart/form-data">
-        <input type="file" name="image" />
+        <input type="file" name="image" multiple="multiple" />
         <input type="submit">
     </form>
 </body>
