--- a/appname/templates/appname/index.html
+++ b/appname/templates/appname/index.html
@@ -5,9 +5,9 @@
 </head>
 
 <body>
-    <form action="api/v1/rectangles/" method="POST" enctype="multipart/form-data">
-        image<input type="file" name="image" />
-        metadata<input type="file" name="metadata" />
+    <form action="api/v1/product/" method="POST">
+        image<input type="text" name="encoded_data" />
+        <!-- metadata<input type="file" name="metadata" /> -->
         <input type="submit">
     </form>
 </body>
